3-Aug-2010, version 1.3-9

Switched from RNetCDF to ncdf package for netcdf file support

-------------------------------------------------------------
2-Aug-2010, version 1.3-8

New clump function, also using igraph for large rasters & minor bug fix

Fixes to subs function (needs more checking)

To allow for better behaviour when using objects derived from Raster* objects (perhaps in other packages), replaced code like
  if (class(x) == 'RasterLayer') 
with
  if (inherits(x, 'RasterLayer'))

Bug fix: error when indexing a RasterStack as in s[1]  (as reported by Kevin Ummel)

-------------------------------------------------------------
27-July-2010, version 1.3-3
Starting this log